--- a/.htaccess
+++ b/.htaccess
@@ -13,3 +13,4 @@ RewriteEngine on
 RewriteRule ^config(|/)$ config.class.php
 
 RewriteRule ^(|/)$ index.php
+RewriteRule ^cadastro(.*)$ cadastro.php
