--- a/.htaccess
+++ b/.htaccess
@@ -14,3 +14,4 @@ RewriteRule ^config(|/)$ config.class.php
 
 RewriteRule ^(|/)$ index.php
 RewriteRule ^cadastro(.*)$ cadastro.php
+RewriteRule ^enviarcontato(.*)$ post.php?contato=enviar
