--- a/.htaccess
+++ b/.htaccess
@@ -18,6 +18,8 @@ RewriteRule ^enviarcontato(.*)$ post.php?contato=enviar
 RewriteRule ^estado/(.*)$ api/json/estados-cidades.json
 
 RewriteRule ^facebook(.*)$ api/Facebook/
-RewriteRule ^loginfb(.*)$ post.php?fb=login
+RewriteRule ^loginfb(.*)$ post.php?logar=fb
 
 RewriteRule ^confirmarcadastropf(.*)$ post.php?cadastro=pf
+
+RewriteRule ^logar(.*)$ post.php?login=entrar
