--- a/painel/.htaccess
+++ b/painel/.htaccess
@@ -3,8 +3,8 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
-ErrorDocument 404 /
-ErrorDocument 500 /
+ErrorDocument 404 /painel/
+ErrorDocument 500 /painel/
 
 </ifModule>
 
@@ -13,5 +13,7 @@ RewriteEngine on
 RewriteRule ^(|/)$ index.php
 RewriteRule ^perfil(.*)$ perfil.php
 RewriteRule ^cronograma(.*)$ cronograma.php
-RewriteRule ^requisicao(.*)$ requisicao.php
+RewriteRule ^requisicao/novo(.*)$ requisicao_novo.php
+RewriteRule ^requisicao/todos(.*)$ requisicao_todos.php
 RewriteRule ^logout(.*)$ ../post.php?login=logout
+RewriteRule ^solicitar(.*)$ ../post.php?solicitar=enviar
