--- a/painel/.htaccess
+++ b/painel/.htaccess
@@ -20,3 +20,5 @@ RewriteRule ^solicitar(.*)$ ../post.php?requisicao=enviar
 RewriteRule ^remover_requisicao(.*)$ ../post.php?requisicao=remover
 RewriteRule ^pesquisar_requisicoes(.*)$ ../post.php?requisicao=filtrar
 
+RewriteRule ^querodoar(.*)$ ../post.php?doacao=modal
+
